# shoes

./: .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  LICENSE  README.md  Tea  build_android.sh  build_ios.sh  cbindgen.toml  profile_memory.sh  udp_test.py
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml  mobile.yml  test.yml
android/: .gitignore  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/com/shoesproxy/: ShoesNative.kt
examples/: anytls.yaml  cert.pem  dns_tuning.yaml  h2mux_client.yaml  http_proxy_basic.yaml  http_through_socks.yaml  https.yaml  hysteria2.yaml  key.pem  mixed.yaml  multi_hop_chain.yaml  naiveproxy.yaml  named_certificates.yaml  reality_basic.yaml  reality_client.yaml  reality_trojan.yaml  reality_vision.yaml  reality_vision_client.yaml  shadowsocks_basic.yaml  shadowtls_v3_local_handshake.yaml  shadowtls_v3_remote_handshake.yaml  snell.yaml  snell_forward_rules.yaml  socks4_basic.yaml  socks_basic.yaml  socks_test.yaml  socks_through_tls_vmess.yaml  socks_through_vmess.yaml  socks_through_wss_vmess.yaml  tls_sni_vmess_and_snell.yaml  trojan_basic.yaml  trojan_tls_through_socks.yaml  tuic_v5.yaml  tuic_v5_port_range.yaml  tun_vpn.yaml  vless_over_tls.yaml  vless_variants.yaml  vmess.yaml  vmess_through_socks.yaml  wss_vmess.yaml  (+1 more)
include/: shoes.h
scripts/: build-android.sh  build-ios.sh
src/: address.rs  async_stream.rs  async_tls.rs  buf_reader.rs  client_proxy.rs  client_proxy_chain.rs  client_proxy_provider.rs  client_proxy_selector.rs  config.rs  copy_bidirectional.rs  copy_bidirectional_message.rs  copy_multidirectional_message.rs  copy_session_messages.rs  http_handler.rs  hysteria2_client.rs  hysteria2_protocol.rs  hysteria2_server.rs  kcp_server.rs  kcp_stream.rs  lib.rs  line_reader.rs  logging.rs  main.rs  mixed_handler.rs  noop_stream.rs  option_util.rs  port_forward_handler.rs  protocol_handler.rs  quic_server.rs  quic_stream.rs  reality_client_handler.rs  resolver.rs  rustls_config_util.rs  rustls_connection_util.rs  rustls_handshake.rs  rustls_util.rs  salt_checker.rs  shadow_tls_handler.rs  shadow_tls_stream.rs  slide_buffer.rs  (+31 more)
src/anytls/: anytls_client_handler.rs  anytls_client_session.rs  anytls_padding.rs  anytls_server_handler.rs  anytls_server_session.rs  anytls_stream.rs  anytls_types.rs  mod.rs
src/config/: mod.rs  pem.rs  types.rs  validate.rs
src/config/types/: client.rs  common.rs  dns.rs  groups.rs  mod.rs  rules.rs  selection.rs  server.rs  shadowsocks.rs  transport.rs  tun.rs
src/crypto/: crypto_connection.rs  crypto_handshake.rs  crypto_reader_writer.rs  crypto_tls_stream.rs  mod.rs
src/dns/: builder.rs  composite_resolver.rs  hickory_resolver.rs  mod.rs  parsed.rs  proxy_runtime.rs
src/ffi/: android.rs  common.rs  ios.rs  mod.rs  stub.rs
src/h2mux/: activity_tracked_stream.rs  activity_tracker.rs  h2mux_client_handler.rs  h2mux_client_session.rs  h2mux_client_stream.rs  h2mux_padding.rs  h2mux_protocol.rs  h2mux_server_session.rs  h2mux_server_stream.rs  h2mux_stream.rs  mod.rs  prepend_stream.rs
src/naiveproxy/: h2_multi_stream.rs  mod.rs  naive_client_handler.rs  naive_client_session.rs  naive_hyper_service.rs  naive_padding_stream.rs  naive_server_handler.rs  user_lookup.rs
src/reality/: common.rs  mod.rs  reality_aead.rs  reality_auth.rs  reality_certificate.rs  reality_cipher_suite.rs  reality_client_connection.rs  reality_client_verify.rs  reality_io_state.rs  reality_reader_writer.rs  reality_records.rs  reality_server_connection.rs  reality_server_handler.rs  reality_tls13_keys.rs  reality_tls13_messages.rs  reality_util.rs
src/routing/: mod.rs  udp_router.rs
src/shadow_tls/: mod.rs  shadow_tls_client_handler.rs  shadow_tls_handler.rs  shadow_tls_hmac.rs  shadow_tls_server_handler.rs  shadow_tls_stream.rs
src/shadowsocks/: aead_util.rs  blake3_key.rs  default_key.rs  mod.rs  shadowsocks_cipher.rs  shadowsocks_handler.rs  shadowsocks_key.rs  shadowsocks_stream.rs  shadowsocks_stream_type.rs  shadowsocks_tcp_handler.rs  timed_salt_checker.rs
src/snell/: mod.rs  snell_fixed_target_stream.rs  snell_handler.rs  snell_udp_stream.rs
src/tcp/: chain_builder.rs  mod.rs  proxy_connector.rs  proxy_connector_impl.rs  socket_connector.rs  socket_connector_impl.rs  tcp_client_connector.rs  tcp_client_handler_factory.rs  tcp_handler.rs  tcp_handler_util.rs  tcp_server.rs  tcp_server_handler_factory.rs
src/tls_factory/: mod.rs  native_tls.rs  rustls.rs
src/tun/: mod.rs  platform.rs  tcp_conn.rs  tcp_stack_async.rs  tcp_stack_direct.rs  tun_server.rs  udp_handler.rs  udp_manager.rs
src/uot/: mod.rs  socks_addr.rs  uot_common.rs  uot_v1_server_stream.rs  uot_v1_stream.rs
src/vless/: mod.rs  tls_deframer.rs  tls_fuzzy_deframer.rs  tls_handshake_util.rs  vision_filter.rs  vision_pad.rs  vision_stream.rs  vision_unpad.rs  vless_client_handler.rs  vless_message_stream.rs  vless_response_stream.rs  vless_server_handler.rs  vless_util.rs
src/vmess/: crc32.rs  fnv1a.rs  md5.rs  mod.rs  nonce.rs  sha2.rs  typed.rs  vmess_handler.rs  vmess_stream.rs
src/websocket/: mod.rs  websocket_handler.rs  websocket_stream.rs
src/xudp/: frame.rs  message_stream.rs  mod.rs
