[package]
name = "shoes"
version = "0.2.5"
edition = "2024"
license = "MIT"
description = "A multi-protocol proxy server."
homepage = "https://github.com/cfal/shoes/"
repository = "https://github.com/cfal/shoes/"
readme = "README.md"
keywords = ["proxy", "proxy-server", "shadowsocks", "v2ray", "vmess"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "shoes"
# rlib = Rust library (for Rust dependencies)
# cdylib = C dynamic library (.so on Linux/Android, .dylib on macOS)
# staticlib = C static library (.a) - required for iOS
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "shoes"
path = "src/main.rs"

[features]
default = []
ffi = []  # Enable FFI module for non-Android builds

[dependencies]
async-trait = "0.1.89"
aws-lc-rs = { version = "1.15.2", default-features = false }
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = "1.11.0"
h2 = "0.4.12"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["tokio", "server"] }
http-body-util = "0.1.3"
dashmap = "6.1.0"
digest = "0.10.7"
env_logger = "0.11.8"
futures = "0.3.31"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.0"
indexmap = "2.12.1"
log = { version = "0.4.29", features = ["release_max_level_info"] }
lru = "0.16.2"
md-5 = "0.10.6"
memchr = "2.7.6"
mime_guess = "2.0.5"
notify = "8.2.0"
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
quinn = { version = "0.11.9", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs"] }
rand = "0.9.2"
rand_core = "0.9.3"
rcgen = { version = "0.14.6", default-features = false, features = ["aws_lc_rs", "pem"] }
rustc-hash = "2.1.1"
rust-argon2 = "3.0.0"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive", "std"] }
subtle = "2.6.1"
serde_yaml = "0.9.34"
sha3 = "0.10.8"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.17", features = ["time"] }
webpki-roots = "1.0.4"

# TUN device support (for VPN mode)
tun = { version = "0.8.5", features = ["async"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-icmp", "socket-udp", "socket-tcp", "socket-tcp-cubic", "phy-tuntap_interface", "assembler-max-segment-count-32"] }
etherparse = "0.16.0"

x509-parser = { version = "0.18.0", default-features = false, features = ["verify-aws"] }
libc = "0.2.179"

[dev-dependencies]
tempfile = "3.23.0"
rustls-pemfile = "2.2.0"
rcgen = { version = "0.14.6", default-features = false, features = ["aws_lc_rs", "pem"] }
tokio-rustls = "0.26.4"
serde_json = "1.0.145"

# jemalloc for better memory performance (not supported on Windows MSVC or iOS)
[target.'cfg(not(any(target_env = "msvc", target_os = "ios")))'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.14.1"
ndk-sys = "0.6.0"
chrono = "0.4.42"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
